[package]
name = "vita"
version = "0.1.3"
authors = ["Junn <likesgophers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
bench = false
path = "src/bin/main.rs"
name = "vita"

[dependencies]
surf = "2.0.0-alpha.4"
base64 = "0.12.3"
clap = "2.33.1"
regex = "1.3.9"
url = "2.1.1"
futures = "0.3.5"
serde = "1.0.113"
serde_json = "1.0.55"
http-types = "2.2.1"
dotenv = "0.15.0"
futures-await-test = "0.3.0"

[dependencies.async-std]
version = "1.6.2"
features = ["attributes"]

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
