[package]
name = "vita"
version = "0.1.10"
authors = ["Junn <likesgophers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
bench = false
path = "src/bin/main.rs"
name = "vita"

[dependencies]
reqwest = {version = "0.10.7", features = ["json"]}
crobat = {path = "./crobat" }
base64 = "0.12.3"
clap = "2.33.1"
regex = "1.3.9"
url = "2.1.1"
futures = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4"
pretty_env_logger = "0.4"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
