[package]
name = "vita"
version = "0.1.14"
authors = ["Junn <likesgophers@gmail.com>"]
description = "vita is a tool to gather subdomains from passive sources"
categories = ["command-line-utilities", "passive reconnaissance"]
keywords = ["recon", "passive", "subdomain enumeration"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
bench = false
path = "src/bin/main.rs"
name = "vita"

[dependencies]
reqwest = {version = "0.10.7", features = ["json"]}
strum = "0.20"
strum_macros = "0.20"
matches = "0.1.8"
async-trait = "0.1.41"
crobat = {path = "./crobat" }
base64 = "0.12.3"
addr = "0.2.0"
clap = "2.33.1"
url = "2.1.1"
futures = "0.3.5"
futures-core = "0.3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tokio = { version = "0.2", features = ["sync", "rt-threaded", "macros"] }
tracing = {version = "0.1.19", features = ["attributes"]}
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.12"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
